--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Bangkok Dinner Adviser（バンコクディナーアドバイザー）</title>
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-5TJL7H2');</script>
+    <!-- End Google Tag Manager -->
+
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/ico/favicon-16x16.png">
+    <link rel="manifest" href="../assets/ico/site.webmanifest">
+    <link rel="mask-icon" href="ico/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <!-- OGP ※基本共通設定 -->
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+    <title>Bangkok Dinner Adviser（バンコクディナーアドバイザー）</title>
+    <meta property="og:title" content="Bangkok Dinner Adviser（バンコクディナーアドバイザー）" />
+    <meta property="og:type" content=" website" />
+    <meta property="og:url" content="https://mnh265.github.io/bkk-dinner" />
+    <meta property="og:image" content="https://mnh265.github.io/bkk-dinner/src/assets/SNS-image.png" />
+    <meta property="og:site_name" content="Bangkok Brass Band（バンコクブラスバンド）団員募集" />
+    <meta property="og:description" content="Bangkok Dinner Adviserを使ってバンコクで今晩行くレストランを決めよう！" />
+
+    <!--  OGP Facebook用設定 -->
+    <meta property="fb:app_id" content="313048139310564" />
+
+    <!-- OGP ※Twitter共通設定 -->
+    <meta name="twitter:card" content="summary_large_image" />
+
+
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TJL7H2"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
