--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <!-- End Google Tag Manager -->
 
     <!-- favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/ico/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/ico/favicon-16x16.png">
-    <link rel="manifest" href="../assets/ico/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/images/ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/images/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/images/ico/favicon-16x16.png">
+    <link rel="manifest" href="/static/images/ico/site.webmanifest">
     <link rel="mask-icon" href="ico/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -28,8 +28,8 @@
     <title>Bangkok Dinner Adviser（バンコクディナーアドバイザー）</title>
     <meta property="og:title" content="Bangkok Dinner Adviser（バンコクディナーアドバイザー）" />
     <meta property="og:type" content=" website" />
-    <meta property="og:url" content="https://mnh265.github.io/bkk-dinner" />
-    <meta property="og:image" content="https://mnh265.github.io/bkk-dinner/src/assets/SNS-image.png" />
+    <meta property="og:url" content="https://bangkok-dinner-adviser.info" />
+    <meta property="og:image" content="https://bangkok-dinner-adviser.info/static/images/SNS-image.png" />
     <meta property="og:site_name" content="Bangkok Brass Band（バンコクブラスバンド）団員募集" />
     <meta property="og:description" content="Bangkok Dinner Adviserを使ってバンコクで今晩行くレストランを決めよう！" />
 
