sns links adjust

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <!-- OGP ※Twitter共通設定 -->
     <meta name="twitter:card" content="summary_large_image" />
 
+    <!-- font awesome -->
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
   </head>
   <body>
