OGP content modified

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta property="og:type" content=" website" />
     <meta property="og:url" content="https://bangkok-dinner-adviser.info" />
     <meta property="og:image" content="https://bangkok-dinner-adviser.info/static/images/SNS-image.png" />
-    <meta property="og:site_name" content="Bangkok Brass Band（バンコクブラスバンド）団員募集" />
+    <meta property="og:site_name" content="Bangkok Dinner Adviser（バンコクディナーアドバイザー）" />
     <meta property="og:description" content="Bangkok Dinner Adviserを使ってバンコクで今晩行くレストランを決めよう！" />
 
     <!--  OGP Facebook用設定 -->
